added text backup for image filtering

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hats': [], 'jackets': [], 'pants': [{'description': 'The clothing item in the image is a pair of regular-fit jeans made from denim material. They feature a medium blue wash with slight fading along the thighs and knees, and classic styling with contrast stitching and a five-pocket design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/8aa389fb-2d0f-48e6-8409-8000f1dbd68a.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/jake-slim-leg-jeans/6043338?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FPants&color=420', 'item_type': 'pants'}], 'shirts': [{'description': \"This shirt is a casual short-sleeved button-up with a single chest pocket, presented in a soft, faded green hue. Made from what appears to be a lightweight, breathable material like linen or cotton, it's ideal for relaxed settings and warm weather.\", 'img_src': 'https://n.nordstrommedia.com/id/sr3/d53ccd7f-9050-4de0-8c58-16dcbce92a17.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/lucky-brand-san-gabriel-short-sleeve-linen-blend-button-up-shirt/7528471?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=340', 'item_type': 'shirts'}], 'shoes': [], 'shorts': [], 'tshirts': [{'description': 'The t-shirt in the image is olive green, exhibiting a simple yet classic style with a crew neckline and short sleeves. It appears to be made of a soft, comfortable material, likely cotton or a cotton blend, and features a distinctive emblem or logo on the left chest area, adding a subtle detail to its design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/089d190d-f84f-4bb5-8d8c-247f04dd52f5.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/volcom-euro-corpo-short-sleeve-heathered-tee/6269472?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FT-Shirts&color=315', 'item_type': 'tshirts'}]}\n"
+      "{'hats': [], 'jackets': [], 'pants': [{'description': 'The clothing item in the image is a pair of regular-fit jeans made from denim material. They feature a medium blue wash with slight fading along the thighs and knees, and classic styling with contrast stitching and a five-pocket design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/8aa389fb-2d0f-48e6-8409-8000f1dbd68a.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/jake-slim-leg-jeans/6043338?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FPants&color=420', 'item_type': 'pants'}], 'shirts': [{'description': \"The shirt depicted is a long-sleeved henley in an olive green color. It's made from a textured fabric, likely a cotton blend, and features a few buttons at the neck for added style and adjustability.\", 'img_src': 'https://n.nordstrommedia.com/id/sr3/90b59927-c3e1-42e0-a62f-1b3932c77337.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/lucky-brand-long-sleeve-henley/7144165?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=350', 'item_type': 'shirts'}], 'shoes': [], 'shorts': [], 'tshirts': [{'description': 'The t-shirt in the image is olive green, exhibiting a simple yet classic style with a crew neckline and short sleeves. It appears to be made of a soft, comfortable material, likely cotton or a cotton blend, and features a distinctive emblem or logo on the left chest area, adding a subtle detail to its design.', 'img_src': 'https://n.nordstrommedia.com/id/sr3/089d190d-f84f-4bb5-8d8c-247f04dd52f5.jpeg?h=365&w=240&dpr=2', 'item_link': 'https://www.nordstromrack.com/s/volcom-euro-corpo-short-sleeve-heathered-tee/6269472?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FT-Shirts&color=315', 'item_type': 'tshirts'}]}\n"
      ]
     }
    ],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -604,9 +604,9 @@
        "   'img_src': 'https://n.nordstrommedia.com/id/sr3/8aa389fb-2d0f-48e6-8409-8000f1dbd68a.jpeg?h=365&w=240&dpr=2',\n",
        "   'item_link': 'https://www.nordstromrack.com/s/jake-slim-leg-jeans/6043338?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FPants&color=420',\n",
        "   'item_type': 'pants'}],\n",
-       " 'shirts': [{'description': \"This shirt is a casual short-sleeved button-up with a single chest pocket, presented in a soft, faded green hue. Made from what appears to be a lightweight, breathable material like linen or cotton, it's ideal for relaxed settings and warm weather.\",\n",
-       "   'img_src': 'https://n.nordstrommedia.com/id/sr3/d53ccd7f-9050-4de0-8c58-16dcbce92a17.jpeg?h=365&w=240&dpr=2',\n",
-       "   'item_link': 'https://www.nordstromrack.com/s/lucky-brand-san-gabriel-short-sleeve-linen-blend-button-up-shirt/7528471?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=340',\n",
+       " 'shirts': [{'description': \"The shirt depicted is a long-sleeved henley in an olive green color. It's made from a textured fabric, likely a cotton blend, and features a few buttons at the neck for added style and adjustability.\",\n",
+       "   'img_src': 'https://n.nordstrommedia.com/id/sr3/90b59927-c3e1-42e0-a62f-1b3932c77337.jpeg?h=365&w=240&dpr=2',\n",
+       "   'item_link': 'https://www.nordstromrack.com/s/lucky-brand-long-sleeve-henley/7144165?origin=category-personalizedsort&breadcrumb=Home%2FMen%2FClothing%2FShirts&color=350',\n",
        "   'item_type': 'shirts'}],\n",
        " 'shoes': [],\n",
        " 'shorts': [],\n",
@@ -616,7 +616,7 @@
        "   'item_type': 'tshirts'}]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,23 +627,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key,value \u001b[38;5;129;01min\u001b[39;00m \u001b[43mres\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpants\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(key), \u001b[38;5;28mtype\u001b[39m(value))\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'> <class 'str'>\n",
+      "<class 'str'> <class 'str'>\n",
+      "<class 'str'> <class 'str'>\n",
+      "<class 'str'> <class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "for key,value in res[\"pants\"][1].items():\n",
+    "for key,value in res[\"pants\"][0].items():\n",
     "    print(type(key), type(value))"
    ]
   },
