caching for politics added

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -874,28 +874,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 Open       High        Low      Close  Adj Close     Volume\n",
-      "Date                                                                        \n",
-      "2024-02-02  16.340000  17.020000  16.145000  17.020000  17.020000   56983900\n",
-      "2024-02-05  17.559999  17.870001  16.480000  16.719999  16.719999  167698300\n",
-      "2024-02-06  20.299999  22.180000  19.760000  21.870001  21.870001  420501900\n",
-      "2024-02-07  21.600000  23.870001  21.379999  23.600000  23.600000  254911100\n",
-      "2024-02-08  23.959999  25.059999  23.320000  24.510000  24.510000  212671100\n",
-      "2024-02-09  25.040001  25.110001  23.570000  24.379999  24.379999  149062000\n",
-      "2024-02-12  23.910000  25.525000  23.820000  25.049999  25.049999  108173000\n",
-      "2024-02-13  23.530001  24.660000  23.309999  24.010000  24.010000  102293300\n",
-      "2024-02-14  24.150000  25.500000  23.754999  25.190001  25.190001   97227900\n",
-      "2024-02-15  25.040001  25.459999  24.709999  25.410000  25.410000   70544300\n",
-      "2024-02-16  24.959999  25.495001  24.389999  24.440001  24.440001   65212100\n",
-      "2024-02-20  23.840000  24.000000  22.715000  23.400000  23.400000   93374300\n",
-      "2024-02-21  22.299999  22.930000  22.290001  22.740000  22.740000   60411500\n",
-      "2024-02-22  23.770000  23.950001  23.049999  23.590000  23.590000   64458200\n",
-      "2024-02-23  23.530001  24.070000  22.820000  22.969999  22.969999   48840800\n",
-      "2024-02-26  23.030001  23.879999  22.940001  23.559999  23.559999   46499500\n",
-      "2024-02-27  23.760000  24.620001  23.719999  24.530001  24.530001   64967400\n",
-      "2024-02-28  24.520000  24.840000  24.245001  24.420000  24.420000   47314000\n",
-      "2024-02-29  24.809999  25.292999  24.360001  25.080000  25.080000   62753300\n",
-      "2024-03-01  25.299999  25.690001  24.535000  24.930000  24.930000   63090500\n"
+      "                 Open       High        Low      Close  Adj Close   Volume\n",
+      "Date                                                                      \n",
+      "2024-02-02  35.240002  35.730000  34.680000  35.419998  35.419998   571300\n",
+      "2024-02-05  34.910000  35.099998  34.130001  34.189999  34.189999   838700\n",
+      "2024-02-06  34.320000  34.869999  33.919998  34.090000  34.090000   828700\n",
+      "2024-02-07  34.290001  34.450001  33.720001  34.200001  34.200001   703400\n",
+      "2024-02-08  34.439999  35.750000  34.189999  35.639999  35.639999  1032300\n",
+      "2024-02-09  35.619999  35.619999  34.669998  35.110001  35.110001   679400\n",
+      "2024-02-12  35.200001  35.799999  35.099998  35.169998  35.169998   648000\n",
+      "2024-02-13  34.400002  34.660000  33.790001  34.180000  34.180000   717700\n",
+      "2024-02-14  34.540001  34.540001  33.610001  33.799999  33.799999   585600\n",
+      "2024-02-15  33.840000  34.990002  33.840000  34.910000  34.910000   970200\n",
+      "2024-02-16  34.689999  35.610001  34.290001  34.930000  34.930000   894700\n",
+      "2024-02-20  34.799999  35.369999  34.619999  34.759998  34.759998  1190100\n",
+      "2024-02-21  34.540001  35.090000  33.919998  34.230000  34.230000  1483200\n",
+      "2024-02-22  35.119999  36.270000  34.419998  35.330002  35.330002  1904400\n",
+      "2024-02-23  35.330002  35.880001  34.939999  35.849998  35.849998  1185100\n",
+      "2024-02-26  35.869999  36.360001  35.650002  35.660000  35.660000   736700\n",
+      "2024-02-27  35.930000  36.150002  35.110001  35.480000  35.480000   801300\n",
+      "2024-02-28  35.130001  35.779999  35.099998  35.220001  35.220001   522900\n",
+      "2024-02-29  35.580002  35.950001  34.910000  35.380001  35.380001   771800\n",
+      "2024-03-01  35.509998  35.750000  34.889999  35.410000  35.410000   682900\n"
      ]
     },
     {
@@ -903,47 +903,47 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\321623453.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\321623453.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_10956\\321623453.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\321623453.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  current_price = data[\"Close\"][-1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'ticker': 'PLTR',\n",
-       " 'percent_today': -1.4624464151871397,\n",
-       " 'current_price': 24.93000030517578,\n",
-       " 'close_prices': {'2024-02-02T00:00:00Z': 17.020000457763672,\n",
-       "  '2024-02-05T00:00:00Z': 16.719999313354492,\n",
-       "  '2024-02-06T00:00:00Z': 21.8700008392334,\n",
-       "  '2024-02-07T00:00:00Z': 23.600000381469727,\n",
-       "  '2024-02-08T00:00:00Z': 24.510000228881836,\n",
-       "  '2024-02-09T00:00:00Z': 24.3799991607666,\n",
-       "  '2024-02-12T00:00:00Z': 25.049999237060547,\n",
-       "  '2024-02-13T00:00:00Z': 24.010000228881836,\n",
-       "  '2024-02-14T00:00:00Z': 25.190000534057617,\n",
-       "  '2024-02-15T00:00:00Z': 25.40999984741211,\n",
-       "  '2024-02-16T00:00:00Z': 24.440000534057617,\n",
-       "  '2024-02-20T00:00:00Z': 23.399999618530273,\n",
-       "  '2024-02-21T00:00:00Z': 22.739999771118164,\n",
-       "  '2024-02-22T00:00:00Z': 23.59000015258789,\n",
-       "  '2024-02-23T00:00:00Z': 22.969999313354492,\n",
-       "  '2024-02-26T00:00:00Z': 23.559999465942383,\n",
-       "  '2024-02-27T00:00:00Z': 24.530000686645508,\n",
-       "  '2024-02-28T00:00:00Z': 24.420000076293945,\n",
-       "  '2024-02-29T00:00:00Z': 25.079999923706055,\n",
-       "  '2024-03-01T00:00:00Z': 24.93000030517578}}"
+       "{'ticker': 'CAKE',\n",
+       " 'percent_today': -0.2816065301260655,\n",
+       " 'current_price': 35.40999984741211,\n",
+       " 'close_prices': {'2024-02-02T00:00:00Z': 35.41999816894531,\n",
+       "  '2024-02-05T00:00:00Z': 34.189998626708984,\n",
+       "  '2024-02-06T00:00:00Z': 34.09000015258789,\n",
+       "  '2024-02-07T00:00:00Z': 34.20000076293945,\n",
+       "  '2024-02-08T00:00:00Z': 35.63999938964844,\n",
+       "  '2024-02-09T00:00:00Z': 35.11000061035156,\n",
+       "  '2024-02-12T00:00:00Z': 35.16999816894531,\n",
+       "  '2024-02-13T00:00:00Z': 34.18000030517578,\n",
+       "  '2024-02-14T00:00:00Z': 33.79999923706055,\n",
+       "  '2024-02-15T00:00:00Z': 34.90999984741211,\n",
+       "  '2024-02-16T00:00:00Z': 34.93000030517578,\n",
+       "  '2024-02-20T00:00:00Z': 34.7599983215332,\n",
+       "  '2024-02-21T00:00:00Z': 34.22999954223633,\n",
+       "  '2024-02-22T00:00:00Z': 35.33000183105469,\n",
+       "  '2024-02-23T00:00:00Z': 35.849998474121094,\n",
+       "  '2024-02-26T00:00:00Z': 35.65999984741211,\n",
+       "  '2024-02-27T00:00:00Z': 35.47999954223633,\n",
+       "  '2024-02-28T00:00:00Z': 35.220001220703125,\n",
+       "  '2024-02-29T00:00:00Z': 35.380001068115234,\n",
+       "  '2024-03-01T00:00:00Z': 35.40999984741211}}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_to_finance_data(\"I think Palantir is going to have a great quarter!\")"
+    "text_to_finance_data(\"CAKE\")"
    ]
   },
   {
