--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,39 +420,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'amount_today': 2.1199951171875, 'close_prices': {'2024-02-02T00:00:00Z': 187.91000366210938, '2024-02-05T00:00:00Z': 181.05999755859375, '2024-02-06T00:00:00Z': 185.10000610351562, '2024-02-07T00:00:00Z': 187.5800018310547, '2024-02-08T00:00:00Z': 189.55999755859375, '2024-02-09T00:00:00Z': 193.57000732421875, '2024-02-12T00:00:00Z': 188.1300048828125, '2024-02-13T00:00:00Z': 184.02000427246094, '2024-02-14T00:00:00Z': 188.7100067138672, '2024-02-15T00:00:00Z': 200.4499969482422, '2024-02-16T00:00:00Z': 199.9499969482422, '2024-02-20T00:00:00Z': 193.75999450683594, '2024-02-21T00:00:00Z': 194.77000427246094, '2024-02-22T00:00:00Z': 197.41000366210938, '2024-02-23T00:00:00Z': 191.97000122070312, '2024-02-26T00:00:00Z': 199.39999389648438, '2024-02-27T00:00:00Z': 199.72999572753906, '2024-02-28T00:00:00Z': 202.0399932861328, '2024-02-29T00:00:00Z': 201.8800048828125, '2024-03-01T00:00:00Z': 202.63999938964844}, 'current_price': 202.63999938964844, 'high': 204.52000427246094, 'low': 198.5, 'percent_today': 1.0572486894159998, 'ticker': 'TSLA', 'volume': 82099200}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = text_to_finance_data(\"TSLA\")"
+    "res = text_to_finance_data(\"FB\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"error\": \"Object of type int64 is not JSON serializable\"}'"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res.text"
+    "res"
    ]
   },
   {
@@ -786,14 +778,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'articles': [{'link': '[link]', 'title': 'The article discusses the downplaying of the Jan. 6 riot by a Texas lawmaker amid the 2024 caucuses and the new updates on the Jan. 6 investigation.'}, {'link': '[link]', 'title': 'The article provides coverage of the Jan. 6 attack on the U.S. Capitol, including the investigation, criminal charges, and congressional hearings.'}, {'link': '[link]', 'title': \"The article details the investigation into the Jan. 6 attack on the U.S. Capitol by a pro-Trump mob, including new warnings of violence that went unheeded, Trump's inaction during the Capitol siege, and the spread of distrust across the country.\"}], 'party': 'Right'}\n"
+      "{'articles': [{'link': 'https://abcnews.go.com/US/january6', 'title': 'ABC News'}, {'link': 'https://www.washingtonpost.com/january-6-capitol-riot/', 'title': 'Washington Post'}], 'party': 'Right'}\n"
      ]
     }
    ],
@@ -803,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +805,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\n",
+      "Cell \u001b[1;32mIn[48], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'text'"
      ]
     }
