--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,6 +844,7 @@
     "    tck = dspy.Predict(Ticker_Finder)\n",
     "    answer = tck(tweet=text)\n",
     "    data = yf.download(answer.ticker, period=\"1mo\")\n",
+    "    print(data.empty)\n",
     "    percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
     "    current_price = data[\"Close\"][-1]\n",
     "    close_prices = data[\"Close\"].to_dict()\n",
@@ -860,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -874,6 +875,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
       "                 Open       High        Low      Close  Adj Close   Volume\n",
       "Date                                                                      \n",
       "2024-02-02  35.240002  35.730000  34.680000  35.419998  35.419998   571300\n",
@@ -903,9 +905,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\321623453.py:10: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\1914675141.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  percent_today = (data[\"Close\"][-1] - data[\"Open\"][-1]) / data[\"Open\"][-1] * 100\n",
-      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\321623453.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_24456\\1914675141.py:12: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  current_price = data[\"Close\"][-1]\n"
      ]
     },
@@ -937,7 +939,7 @@
        "  '2024-03-01T00:00:00Z': 35.40999984741211}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
