--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,31 +420,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'amount_today': 10.19000244140625, 'close_prices': {'2024-02-02T00:00:00Z': 474.989990234375, '2024-02-05T00:00:00Z': 459.4100036621094, '2024-02-06T00:00:00Z': 454.7200012207031, '2024-02-07T00:00:00Z': 469.5899963378906, '2024-02-08T00:00:00Z': 470.0, '2024-02-09T00:00:00Z': 468.1099853515625, '2024-02-12T00:00:00Z': 468.8999938964844, '2024-02-13T00:00:00Z': 460.1199951171875, '2024-02-14T00:00:00Z': 473.2799987792969, '2024-02-15T00:00:00Z': 484.0299987792969, '2024-02-16T00:00:00Z': 473.32000732421875, '2024-02-20T00:00:00Z': 471.75, '2024-02-21T00:00:00Z': 468.0299987792969, '2024-02-22T00:00:00Z': 486.1300048828125, '2024-02-23T00:00:00Z': 484.0299987792969, '2024-02-26T00:00:00Z': 481.739990234375, '2024-02-27T00:00:00Z': 487.04998779296875, '2024-02-28T00:00:00Z': 484.0199890136719, '2024-02-29T00:00:00Z': 490.1300048828125, '2024-03-01T00:00:00Z': 502.29998779296875}, 'current_price': 502.29998779296875, 'high': 504.25, 'low': 491.8500061035156, 'percent_today': 2.070675813279125, 'ticker': 'META', 'volume': 16273600}\n"
+     ]
+    }
+   ],
    "source": [
-    "res = text_to_finance_data(\"FB\")"
+    "res = text_to_finance_data(\"META\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [500]>"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[64], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'text'"
+     ]
     }
    ],
    "source": [
-    "res"
+    "res.text"
    ]
   },
   {
